[chromium] Layer contents scale change should trigger invalidation

https://bugs.webkit.org/show_bug.cgi?id=74086

When the contents scale of a layer is changed, the entire contents of
the layer should be marked dirty.

Patch by Sami Kyostila <skyostil@google.com> on 2011-12-08
Reviewed by James Robinson.

Source/WebCore:

* platform/graphics/chromium/LayerChromium.cpp:
(WebCore::LayerChromium::setContentsScale):

Source/WebKit/chromium:

* tests/LayerChromiumTest.cpp:

Canonical link: https://commits.webkit.org/90800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102395 268f45cc-cd09-0410-ab3c-d52691b4dbfc